# DynamicSetCover

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  dynsc.cpp
data/: dataset001.hgr  dataset003.hgr  dataset004.hgr  dataset005.hgr  dataset006.hgr  dataset007.hgr  dataset009.hgr  dataset010.hgr  dataset_mapping.txt  dataset_summary.txt
lib/: CMakeLists.txt  DataTypes.h
lib/algorithms/: alg1.cpp  alg1.h  alg2.cpp  alg2.h  alg3.cpp  alg3.h  alg4.cpp  alg4.h  dynsc_ctrl.h
lib/io/: dynsc_io.cpp  dynsc_io.h
